Added 'Video' keyboard with smilies (Fits under video when playing)
Tapatalk: Added ability to use forum specific smilies when available
Added settings option 'Change Keyboard' which allows you to change which keyboard is installed without manually uninstalling and reinstalling
Enabling or changing skin mods no longer requires a Forum Browser restart

*** 2.1.1 ***

ParserBrowser: Added context menu option to Posts view: 'View Thread In WebViewer' useful if no posts show, or whatever
Can now change themes without restarting forum browser
Fixed a bug preventing the display of the context menu on the online users display
Fixed a bug with avatars on the online users display in the Video skin
Added 'Disable Window Stacking' to settings advanced
Added option to the posts view context menu 'View Posts As A Page' which shows a full view of all the posts on the page together
Colorized the text of links and images
Links where the text is the same as the URL now only show the URL once
When skin mods are installed, links now show a hand icon instead of the word 'LINK' and images now have a more graphical style appearance
Added 'Appearance' section to settings and moved some setting from 'Genereal' to there
Added 'Hide Image URLs In Posts Display' to settings:Appearance
Updated the settings help

*** 2.1.0 *** 04-24-2013 ***

Created custom skins and handling for Yes/No style dialogs
When editing a forum logo in the forum settings dialog, now does nothing if you exit the Edit/Browse dialog instead of choosing
Added text dialog skin for the Video skin (eg. the dialog where you view the changelog)
Added help dialog skin for the Video skin
Updated translations

*** 2.0.6 ***

Fixed duplicate error message dialogs
Fixed a bug causing some signatures not to show
Tapatalk: Improved progress bar updates on posts view
Video Skin: Moved progress bar to a slide-out at the bottom of the screen