@@ -238,7 +238,7 @@
 					<onleft>220</onleft>
 					
 					<onup>207</onup>
-					<ondown>210</ondown>
+					<ondown>211</ondown>
 					<posx>40</posx>
 					<posy>380</posy>
 					<width>290</width>
@@ -252,11 +252,54 @@
 					<disabledcolor>60000000</disabledcolor>
 					<focusedcolor>white</focusedcolor>
 				</control>
-
+				
+				<control type="group">
+					<visible>StringCompare(Container(220).ListItem.Property(favorite),favorite)</visible>
+					<posx>40</posx>
+					<posy>435</posy>
+					<width>290</width>
+					<control type="button" id="211">
+						<description>Fav Up</description>
+						<onleft>220</onleft>
+						<onup>208</onup>
+						<ondown>212</ondown>
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>290</width>
+						<height>40</height>
+						<font>ForumBrowser-font13</font>
+						<align>center</align>
+						<label>$ADDON[script.forum.browser 32543]</label>
+						<texturefocus border="20">forum-browser-grey-boxr.png</texturefocus>
+						<texturenofocus border="20">forum-browser-white-boxr.png</texturenofocus>
+						<textcolor>black</textcolor>
+						<disabledcolor>60000000</disabledcolor>
+						<focusedcolor>white</focusedcolor>
+					</control>
+					<control type="button" id="212">
+						<description>Fav Down</description>
+						<onleft>220</onleft>
+						<onup>211</onup>
+						<ondown>210</ondown>
+						<posx>0</posx>
+						<posy>50</posy>
+						<width>290</width>
+						<height>40</height>
+						<font>ForumBrowser-font13</font>
+						<align>center</align>
+						<label>$ADDON[script.forum.browser 32544]</label>
+						<texturefocus border="20">forum-browser-grey-boxr.png</texturefocus>
+						<texturenofocus border="20">forum-browser-white-boxr.png</texturenofocus>
+						<textcolor>black</textcolor>
+						<disabledcolor>60000000</disabledcolor>
+						<focusedcolor>white</focusedcolor>
+					</control>
+				</control>
+				
 				<control type="button" id="210">
 					<description>Help</description>
 					<onleft>220</onleft>
-					<onup>208</onup>
+					<onup>212</onup>
 					<ondown>200</ondown>
 					<posx>40</posx>
 					<posy>540</posy>
@@ -513,6 +556,15 @@
 						<height>2</height>
 						<texture>forum-browser-white-box.png</texture>
 						<colordiffuse>FF999999</colordiffuse>
+						<visible>StringCompare(ListItem.Property(separator),)</visible>
+					</control>
+					<control type="image">
+						<posx>0</posx>
+						<posy>37</posy>
+						<width>600</width>
+						<height>2</height>
+						<texture>forum-browser-black-square.png</texture>
+						<visible>!StringCompare(ListItem.Property(separator),)</visible>
 					</control>
 				</itemlayout>
 				<focusedlayout height="39">
@@ -523,6 +575,15 @@
 						<height>2</height>
 						<texture>forum-browser-white-box.png</texture>
 						<colordiffuse>FF999999</colordiffuse>
+						<visible>StringCompare(ListItem.Property(separator),)</visible>
+					</control>
+					<control type="image">
+						<posx>0</posx>
+						<posy>37</posy>
+						<width>600</width>
+						<height>2</height>
+						<texture>forum-browser-black-square.png</texture>
+						<visible>!StringCompare(ListItem.Property(separator),)</visible>
 					</control>
 					<control type="group">
 						<control type="image">
