@@ -31,7 +31,7 @@
 			</control>
 				
 			<control type="group" id="260">
-				<animation effect="slide" end="-300,0" time="400" condition="!ControlGroup(260).HasFocus(0)">Conditional</animation>
+				<animation effect="slide" end="-310,0" time="400" condition="!ControlGroup(260).HasFocus(0)">Conditional</animation>
 				<posx>610</posx>
 				<posy>-40</posy>
 				
@@ -156,7 +156,6 @@
 				<control type="button" id="204">
 					<description>Remove From Favs</description>
 					<onleft>220</onleft>
-					
 					<onup>203</onup>
 					<ondown>205</ondown>
 					<posx>30</posx>
@@ -198,7 +197,6 @@
 				<control type="button" id="207">
 					<description>Add Online</description>
 					<onleft>220</onleft>
-					
 					<onup>205</onup>
 					<ondown>208</ondown>
 					<posx>30</posx>
@@ -218,9 +216,8 @@
 				<control type="button" id="208">
 					<description>Theme Online</description>
 					<onleft>220</onleft>
-					
 					<onup>207</onup>
-					<ondown>210</ondown>
+					<ondown>211</ondown>
 					<posx>30</posx>
 					<posy>380</posy>
 					<width>310</width>
@@ -235,11 +232,72 @@
 					<disabledcolor>60000000</disabledcolor>
 					<focusedcolor>white</focusedcolor>
 				</control>
+				
+				<control type="group">
+					<visible>StringCompare(Container(220).ListItem.Property(favorite),favorite)</visible>
+					<posx>30</posx>
+					<posy>435</posy>
+					<width>310</width>
+					<control type="button" id="211">
+						<description>Fav Up</description>
+						<onleft>220</onleft>
+						<onup>208</onup>
+						<ondown>212</ondown>
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>310</width>
+						<height>40</height>
+						<font>ForumBrowser-font13</font>
+						<align>right</align>
+						<textoffsetx>70</textoffsetx>
+						<label>$ADDON[script.forum.browser 32543]</label>
+						<texturefocus>forum-browser-video-select-indicator.png</texturefocus>
+						<texturenofocus>forum-browser-video-unselect.png</texturenofocus>
+						<textcolor>FF4488AA</textcolor>
+						<disabledcolor>60000000</disabledcolor>
+						<focusedcolor>FF4488AA</focusedcolor>
+					</control>
+					<control type="image">
+						<posx>60r</posx>
+						<posy>10</posy>
+						<width>20</width>
+						<height>20</height>
+						<texture flipy="true">forum-browser-video-down-arrow.png</texture>
+						<colordiffuse>FF4488AA</colordiffuse>
+					</control>
+					<control type="button" id="212">
+						<description>Fav Down</description>
+						<onleft>220</onleft>
+						<onup>211</onup>
+						<ondown>210</ondown>
+						<posx>0</posx>
+						<posy>50</posy>
+						<width>310</width>
+						<height>40</height>
+						<font>ForumBrowser-font13</font>
+						<align>right</align>
+						<textoffsetx>70</textoffsetx>
+						<label>$ADDON[script.forum.browser 32544]</label>
+						<texturefocus>forum-browser-video-select-indicator.png</texturefocus>
+						<texturenofocus>forum-browser-video-unselect.png</texturenofocus>
+						<textcolor>FF4488AA</textcolor>
+						<disabledcolor>60000000</disabledcolor>
+						<focusedcolor>FF4488AA</focusedcolor>
+					</control>
+					<control type="image">
+						<posx>60r</posx>
+						<posy>60</posy>
+						<width>20</width>
+						<height>20</height>
+						<texture>forum-browser-video-down-arrow.png</texture>
+						<colordiffuse>FF4488AA</colordiffuse>
+					</control>
+				</control>
 
 				<control type="button" id="210">
 					<description>Help</description>
 					<onleft>220</onleft>
-					<onup>208</onup>
+					<onup>212</onup>
 					<ondown>200</ondown>
 					<posx>30</posx>
 					<posy>540</posy>
@@ -534,6 +592,16 @@
 						<height>1</height>
 						<texture>forum-browser-video-white.png</texture>
 						<colordiffuse>FF333333</colordiffuse>
+						<visible>StringCompare(ListItem.Property(separator),)</visible>
+					</control>
+					<control type="image">
+						<posx>2</posx>
+						<posy>38</posy>
+						<width>636</width>
+						<height>1</height>
+						<texture>forum-browser-video-white.png</texture>
+						<colordiffuse>FF99DDFF</colordiffuse>
+						<visible>!StringCompare(ListItem.Property(separator),)</visible>
 					</control>
 					<control type="image">
 						<posx>2</posx>
@@ -553,6 +621,16 @@
 						<height>1</height>
 						<texture>forum-browser-video-white.png</texture>
 						<colordiffuse>FF333333</colordiffuse>
+						<visible>StringCompare(ListItem.Property(separator),)</visible>
+					</control>
+					<control type="image">
+						<posx>2</posx>
+						<posy>38</posy>
+						<width>636</width>
+						<height>1</height>
+						<texture>forum-browser-video-white.png</texture>
+						<colordiffuse>FF99DDFF</colordiffuse>
+						<visible>!StringCompare(ListItem.Property(separator),)</visible>
 					</control>
 					<control type="group">
 						<control type="image">
